@startuml
class mundial.src.MundialStage {
- String stage
- ArrayList<Match> matchList
# ArrayList<Team> nextStageTeams
+ <<Create>> MundialStage()
+ ArrayList<Match> addMatch(Match)
+ void generateMarker(ArrayList<Match>)
+ ArrayList<Match> getMatchList()
+ void setMatchList(ArrayList<Match>)
+ String getStage()
+ void setStage(String)
+ ArrayList<Team> getNextStageTeams()
+ void setNextStageTeams(ArrayList<Team>)
}
class garaje.src.Coche {
- int numPuertas
+ <<Create>> Coche(String,double,String,Client,int)
+ int getNumPuertas()
}
class garaje.src.Garaje {
- double precioCambioRueda
- int capacidadMaxima
- int numVehiculosActuales
- ArrayList<Vehiculo> listaVehiculos
+ <<Create>> Garaje(double,int)
+ boolean ingresarVehiculo(Vehiculo,Client)
+ boolean retirarVehiculo(Vehiculo)
+ int getNumVehiculosActuales()
+ double getPrecioCambioRueda()
+ double getPrecioCambioRuedasTotal()
+ double getKilometrajeMedio()
+ void imprimirInformacionGaraje()
+ void imprimirInformacionVehiculos()
}
class mundial.src.Match {
- Date dateMatch
- Team localTeam
- Team visitingTeam
- Result resultMatch
+ <<Create>> Match()
+ <<Create>> Match(Team,Team,Date,Result)
+ <<Create>> Match(Team,Team,Date)
+ void makeGoal()
+ Date getDateMatch()
+ void setDateMatch(Date)
+ Team getLocalTeam()
+ void setLocalTeam(Team)
+ Team getVisitingTeam()
+ void setVisitingTeam(Team)
+ Result getResultMatch()
+ void setResultMatch(Result)
}
class garaje.src.Vehiculo {
- String marca
- double kilometraje
- String matriculaCliente
- Client cliente
+ <<Create>> Vehiculo(String,double,String,Client)
+ String getMarca()
+ double getKilometraje()
+ String getMatriculaCliente()
+ void setMatriculaCliente(String)
+ Client getCliente()
+ void setCliente(Client)
}
class garaje.src.Moto {
- double cilindrada
+ <<Create>> Moto(String,double,String,Client,double)
+ double getCilindrada()
}
class mundial.src.Keys {
+ void generateMatches(ArrayList<Team>)
+ ArrayList<Team> getNextStageTeams()
}
class mundial.src.Team {
- String teamName
- ArrayList<Match> matchesPlayed
- int points
+ int addedPoints
~ <<Create>> Team()
+ <<Create>> Team(String)
+ void addPoints()
+ String getTeamName()
+ void setTeamName(String)
+ int getPoints()
+ void setPoints(int)
}
class mundial.src.Main {
+ {static} void main(String[])
}
class garaje.src.GarajeTest {
+ {static} void main(String[])
}
class garaje.src.Client {
- String clientName
- String clientPlate
- String expectedResult
- int points
+ <<Create>> Client(String,String,String)
+ void addPoints()
+ int getPoints()
+ String getClientName()
+ void setClientName(String)
+ String getClientPlate()
+ void setClientPlate(String)
+ String getExpectedResult()
+ void setExpectedResult(String)
}
class mundial.src.Result {
- int localGoals
- int visitingGoals
+ boolean localWin()
+ boolean draw()
+ int getLocalGoals()
+ int getVisitingGoals()
+ void setLocalGoals(int)
+ void setVisitingGoals(int)
}
class Main {
+ {static} void main(String[])
}
class mundial.src.Group {
+ <<Create>> Group()
+ void generateMatch(ArrayList<Team>)
+ ArrayList<Team> getNextStageTeams()
+ void generateMarker(ArrayList<Match>)
}


garaje.src.Vehiculo <|-- garaje.src.Coche
garaje.src.Vehiculo <|-- garaje.src.Moto
mundial.src.MundialStage <|-- mundial.src.Keys
mundial.src.MundialStage <|-- mundial.src.Group
@enduml